--- a/TestModule/TestModule.vcxproj.filters
+++ b/TestModule/TestModule.vcxproj.filters
@@ -151,6 +151,15 @@
     <ClCompile Include="IDL\PingPong_p.cpp">
       <Filter>Generated</Filter>
     </ClCompile>
+    <ClCompile Include="IDL\Test_AVT.cpp">
+      <Filter>Generated</Filter>
+    </ClCompile>
+    <ClCompile Include="IDL\Test_AVT_p.cpp">
+      <Filter>Generated</Filter>
+    </ClCompile>
+    <ClCompile Include="..\TestORB\TestORB\module\ImplAVT.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\TestORB\TestORB\include\I1_factory_dynamic.h">
@@ -294,6 +303,12 @@
     <ClInclude Include="IDL\PingPong.h">
       <Filter>Generated</Filter>
     </ClInclude>
+    <ClInclude Include="IDL\Test_AVT.h">
+      <Filter>Generated</Filter>
+    </ClInclude>
+    <ClInclude Include="IDL\Test_AVT_s.h">
+      <Filter>Generated</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <CustomBuild Include="..\TestORB\TestORB\idl\RecursiveStruct.idl">
@@ -333,6 +348,9 @@
       <Filter>IDL</Filter>
     </CustomBuild>
     <CustomBuild Include="..\TestORB\TestORB\idl\PingPong.idl">
+      <Filter>IDL</Filter>
+    </CustomBuild>
+    <CustomBuild Include="..\TestORB\TestORB\idl\Test_AVT.idl">
       <Filter>IDL</Filter>
     </CustomBuild>
   </ItemGroup>
