--- a/TestProcess/TestProcess.vcxproj.filters
+++ b/TestProcess/TestProcess.vcxproj.filters
@@ -79,6 +79,9 @@
     <ClCompile Include="IDL\PingPong.cpp">
       <Filter>Generated</Filter>
     </ClCompile>
+    <ClCompile Include="IDL\Test_AVT.cpp">
+      <Filter>Generated</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\TestORB\TestORB\include\I1_factory_dynamic.h">
@@ -165,6 +168,9 @@
     <ClInclude Include="IDL\PingPong.h">
       <Filter>Generated</Filter>
     </ClInclude>
+    <ClInclude Include="IDL\Test_AVT.h">
+      <Filter>Generated</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <CustomBuild Include="..\TestORB\TestORB\idl\RecursiveStruct.idl">
@@ -204,6 +210,9 @@
       <Filter>IDL</Filter>
     </CustomBuild>
     <CustomBuild Include="..\TestORB\TestORB\idl\PingPong.idl">
+      <Filter>IDL</Filter>
+    </CustomBuild>
+    <CustomBuild Include="..\TestORB\TestORB\idl\Test_AVT.idl">
       <Filter>IDL</Filter>
     </CustomBuild>
   </ItemGroup>
